src/FinancialForce Accounting/objects/codaIntegrationRuleLineItem__c.object
<CustomObject>
    <description>Defines and integration rule at line item (detail) level.</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ForPrinting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForReading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Reading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForWriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Writing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationRule__c</fullName>
        <label>Integration Rule</label>
        <referenceTo>codaIntegrationRule__c</referenceTo>
        <relationshipLabel>Integration Rule Line Items</relationshipLabel>
        <relationshipName>IntegrationRuleLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceFieldDecimal__c</fullName>
        <label>Source Field Decimal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceFieldPath__c</fullName>
        <label>Source Field Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceFieldReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Field Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceFieldReferenceTo__c</fullName>
        <label>Source Field Reference To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceFieldRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Field Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceFieldSize__c</fullName>
        <label>Source Field Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceFieldType__c</fullName>
        <label>Source Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>Source Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetFieldDecimal__c</fullName>
        <label>Target Field Decimal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetFieldPath__c</fullName>
        <label>Target Field Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetFieldReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Field Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetFieldReferenceTo__c</fullName>
        <label>Target Field Reference To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetFieldRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Field Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetFieldSize__c</fullName>
        <label>Target Field Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetFieldType__c</fullName>
        <label>Target Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Rule Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Integration Rule Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Rule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>